--- a/src/assets/scss/components/_menu.scss
+++ b/src/assets/scss/components/_menu.scss
@@ -15,16 +15,17 @@
 	}
 
 	&__item+&__item {
-		@include mar (0, 0, 0, 32px);
+		margin-left: 32px;
+		
 
 		// @media only screen and (max-width: 1368px) {
 		// 	@include mar (0, 0, 0, 0);
 		// }
 	}
 		&__item:hover {
-			@include transition (all, .2s, ease-in-out);
-			@include transform (scale(1.3));
-		}
+			transition: all .2s ease-in-out;
+			transform: scale(1.3);
+			}
 
 		&__link {
 			@include font (1rem, 2.5em, -0.02em, uppercase, 700);
@@ -36,15 +37,16 @@
 
 			&::after {
 				@include pseudo;
-				@include box-size (0, 2px);
-				@include pos-abs ($t: 22px, $l: 0);
+				width: 0;
+				height: 2px;
+				@include pos ($position: absolute, $t: 22px, $l: 0);
 				background-color: $bg-main-color;
 			}
 
 			&:hover::after {
-				@include transition (all, .2s, ease-in-out);
-				@include box-size ($w: 100%);
-			}
+				transition: all .2s ease-in-out;
+				width: 100%;			
+				}
 
 			&:active {
 				color: #223499;
