--- a/src/assets/scss/components/_personal.scss
+++ b/src/assets/scss/components/_personal.scss
@@ -4,23 +4,24 @@
 	}
 
 	&__icon:hover {
-		@include transform (scale(1.2));
-	}
+		transform: scale(1.3);
+		}
 
 	&__item+&__item {
-		@include mar (0, 0, 0, 45px);
-	}
+		margin-left: 45px;
+		}
 
 	&__link--cart {
 		position: relative;
 	}
 
 	&__count {
-		@include pos-abs ($b: -10px, $l: 25px);
+		@include pos ($position: absolute, $b: -10px, $l: 25px);
 		@include font ($fs: 0.625rem, $text-trans: uppercase);
 		@include flex (center, center, wrap);
-		@include box-size (21px, 21px);
-		@include border-radius (50%);
+		width: 21px;
+		height: 21px;
+		border-radius: 50%;
 		background-color: $bg-main-color;
 	}
 }
