--- a/src/assets/scss/layout/_instagram.scss
+++ b/src/assets/scss/layout/_instagram.scss
@@ -1,6 +1,5 @@
 .instagram {
-	@include mar (0, auto, 0, auto);
-	
+	margin: 0 auto;
 	text-align: center;
 
 	&__inner {
@@ -8,50 +7,48 @@
 	}
 
 	&__title {
-		@include mar (0, 0, 50px, 40px);
-
+		margin: 0 0 50px 40px;
 		font-size: 1.5rem;
-		/*24px*/
 		text-align: center;
 		position: relative;
 		display: inline-block;
-
-		
 	}
 
 	&__link {
-		
+
 		&::before {
 			@include pseudo;
-			@include pos-abs ($t: -5px, $l: -40px);
+			@include pos ($position: absolute, $t: -5px, $l: -40px);
 			@include background (url("../images/instagram/instagramm.png"));
-			@include box-size (26px, 26px);
-		}
+			width: 26px;
+			height: 26px;
+			}
 	}
 
 	&__inner {
 		@include flex (flex-start, center);
 		overflow-x: auto;
-		@include mar (0, 0, 10px, 0);
+		margin-bottom: 10px;
 		flex: 1 0 20%;
 	}
 
 	&__picture {
 		position: relative;
-		@include box-size ($w: 100%);
+		width: 100%;
 		
 		&::before {
 			@include pseudo;
-			@include pos-abs ($b: 17px, $r: 23px);
+			@include pos ($position: absolute, $b: 17px, $r: 23px);
 			@include background (url("../images/instagram/instagramm_white.png"));
-			@include box-size (26px, 26px);
+			width: 26px;
+			height: 26px;
 			z-index: 1;
 		}
 	}
 
 	&__img {
-		@include box-size (100%, 384px);
+		width: 100%;
+		height: 394px;
 		min-width: 384px;
-		}
-
+	}
 }
