--- a/src/assets/scss/layout/_products.scss
+++ b/src/assets/scss/layout/_products.scss
@@ -10,9 +10,10 @@
 	&__item {
 		@include flex (center, center, nowrap, column);
 		min-width: 480px;
-		@include box-size (100%, 720px);
-		@include pad (130px, 0, 0, 0);
-
+		width: 100%;
+		height: 720px;
+		padding-top: 130px;
+		
 		&--brown {
 			background-color: #642c18;
 		}
@@ -32,33 +33,34 @@
 	}
 
 	&__img {
-		@include mar (0, 0, 25px, 0);
-	}
+		margin-bottom: 25px;
+		}
 
 	&__title {
 		@include font ($fs: 1.5rem, $lh: 1.1em, $fw: 700);
-		@include mar (0, 0, 5px, 0);
-	}
+		margin-bottom: 5px;
+		}
 
 	&__subtitle {
 		@include font ($fs: 1.3rem, $lh: 1.5em);
-		@include mar (0, 0, 60px, 0);
-	}
+		margin-bottom: 60px;
+		}
 
 	&__btn {
-		@include box-size (207px, 63px);
+		width: 207px;
+		height: 63px;
 		@include border (2px, solid, $bg-main-color);
-		@include mar (0, 0, 80px, 0);
+		margin-bottom: 80px;
 		position: relative;
 		text-indent: -90px;
-		@include border-radius-px (30);
-
+		border-radius: 30px;
+		
 		&::before {
 			@include pseudo;
-			@include pos-abs ($t: 20px, $l: 140px);
-			@include box-size (30px, 16px);
+			@include pos ($position: absolute, $t: 20px, $l: 140px);
+			width: 30px;
+			height: 16px;
 			@include background (url("../images/products/products_arrow_white.png"));
 		}
 	}
-
 }
