--- a/src/assets/scss/layout/_blog.scss
+++ b/src/assets/scss/layout/_blog.scss
@@ -2,11 +2,12 @@
 	padding: 90px 10px 200px;
 	
 	&__wrapper {
-		@include flex (center, center, wrap);
+		@include flex (flex-start, center, wrap);
 	}
 
 	&__box {
 		@include flex ($fd: column);
+		margin: 0 30px 0 260px
 	}
 
 	&__title {
@@ -17,7 +18,7 @@
 		}
 
 	&__text-box {
-		margin: 225px 30px 45px 30px;
+		margin: 225px 0 45px;
 		
 		position: relative;
 		@media only screen and (max-width: 1216px) {
