--- a/src/assets/scss/components/_burger-active.scss
+++ b/src/assets/scss/components/_burger-active.scss
@@ -1,42 +1,15 @@
-// ._active {
-// 	// @include pos-fix (0, 0, 0, 0);
-// 	@include box-size ($h: 100vh);
-// 	/* overflow-y: hidden; */
-// 	@include transition (all, 0.2s, ease-in-out);
-// 	z-index: 1;
-// position: fixed;
-// 	background-color: $bg-burger-color;
-
-// 	@include flex (center, center, wrap, column-reverse);
-// 	visibility: visible;
-
-// }
-
-// @media only screen and (max-width: 1368px) {
-// 	// div.header__navigation._active {
-// 	// 	// @include transform (translateX(-100%));
-// 	// }
-
-// 	._active+.header__burger-btn .header__burger-line::before {
-// 		@include transform (rotate(90deg) translate(10px, 0));
-// 		// @include transform (rotate(90deg), translate(10px, 0));
-// 	}
-
-// 	._active+.header__burger-btn .header__burger-line {
-// 		@include box-size ($w: 40px);
-// 		@include transform (rotate(-45deg) translate(-15px, 0));
-
-// 	}
-
-// 	._active+.header__burger-btn .header__burger-line::after {
-// 		@include transform (scale(0));
-// 	}
-// }
 ._active {
-	// visibility: visible;
+	visibility: visible;
 	background-color: $bg-burger-color;
 	height: 100vh;
-	transform: translateX(0);
+	left: 0;
+	width: 100%;
+	position: fixed;
+	transition: all .5s ease-in-out;
+	
+	z-index: 1;
+
+	@include flex (center, center, wrap, column-reverse);
 }
  	
 // меняем бургер на крестик
@@ -52,3 +25,5 @@
 	._active+.header__burger-btn .header__burger-line::after {
 		transform: scale(0);		
 	}
+
+	
