--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -15,7 +15,7 @@
 @import "./components/text";
 @import "./components/title";
 @import "./components/buttons";
-
+@import "./components/burger";
 @import "./components/menu";
 @import "./components/personal";
 @import "./components/social";
