--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -31,9 +31,7 @@
 
 		@media only screen and (max-width: 1368px) {
 			display: none;
-			transform: translateX(-100%);
-			transition: all 1s;
-		}
+			}
 
 	}
 
@@ -73,15 +71,9 @@
 			
 		}
 	}
-&__burger-menu{
-	visibility: hidden;
-	position: fixed;
-	top: 0;
-	left: -100%;
-	height: 100%;
-	// @media only screen and (max-width: 1368px) {
-	// 	visibility: visible;
-	// 	}
+&__burger{
+	display: none;
+	
 }
 	&__content {
 		@include flex ($jc: center, $ai: center, $fd: column);
@@ -107,6 +99,7 @@
 
 
 	@media only screen and (max-width: 1440px) {
+
 		&__personal::before {
 			display: none;
 		}
