--- a/src/assets/scss/components/_burger-active.scss
+++ b/src/assets/scss/components/_burger-active.scss
@@ -7,6 +7,7 @@
 	width: 100%;
 	transition: all .5s ease-in-out;
 	z-index: 1;
+	transform: translateX(0);
 
 	@include flex (flex-end, center, wrap, column-reverse);
 }
