--- a/src/assets/scss/layout/_about.scss
+++ b/src/assets/scss/layout/_about.scss
@@ -1,17 +1,22 @@
 .about {
 	background-color: $bg-about-color;
-	height: 800px;
+	
 
 
 	&__inner {
 		@include flex(flex-start, center, wrap);
-		@media only screen and (max-width: 1520px) {
-			@include flex(center, center, wrap);
-			padding-bottom: 80px;
-			}
+		height: 800px;
+	@media only screen and (max-width: 1520px) {
+		height: auto;
+		justify-content: center;
+		}
 	}
 &__wrapper {
-	margin: 0 180px 0 0;
+	@include flex(center, center);
+	flex-basis: 50%;
+	@media only screen and (max-width: 1520px) {
+		flex-basis: 52%;
+		}
 }
 
 	&--yellow {
@@ -32,7 +37,7 @@
 	}
 
 	&__img {
-		transform: translate(42px, 63px);				
+		transform: translate(-40px, 63px);				
 		max-width: 690px;
 		width: 100%;
     
@@ -41,6 +46,9 @@
 	&__wrap {
 		@include flex (flex-start, flex-start, wrap, column);
 		margin: 80px 0 95px 0;
+		flex-basis: 50%;
+		
+		
 		
 		// @media only screen and (max-width: 1520px) {
 		// 	margin-left: 70px;
