fixed bags in burger__btn fixed

--- a/src/assets/scss/base/_normalize.scss
+++ b/src/assets/scss/base/_normalize.scss
@@ -33,8 +33,8 @@ body {
 	color: #fff;
   // overflow-x: hidden;
   overflow-y: scroll;
-  transform-style: preserve-3d;
-  perspective: 1px;
+  // transform-style: preserve-3d;
+  // perspective: 1px;
  }
 
 /* проблема переполнения */
