--- a/src/assets/scss/layout/_about.scss
+++ b/src/assets/scss/layout/_about.scss
@@ -47,6 +47,7 @@
 		@include flex (flex-start, flex-start, wrap, column);
 		margin: 80px 0 95px 0;
 		flex-basis: 50%;
+		padding-left: 18px;
 		
 		
 		
