--- a/src/assets/scss/layout/_blog.scss
+++ b/src/assets/scss/layout/_blog.scss
@@ -7,7 +7,7 @@
 
 	&__box {
 		@include flex ($fd: column);
-		margin: 0 30px 0 260px
+		
 	}
 
 	&__title {
@@ -18,7 +18,7 @@
 		}
 
 	&__text-box {
-		margin: 225px 0 45px;
+		padding: 225px 0 45px;
 		
 		position: relative;
 		@media only screen and (max-width: 1216px) {
