--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -1,5 +1,5 @@
 $bg-header-color: #ffd68f;
-$burger-color: #c7c5c4;
+$burger-color: #e7e4e3;
 $bg-cards-color: #f6edde;
 $bg-main-color: #fff;
 $text-cards-color: #f2612d;
@@ -9,3 +9,4 @@ $bg-footer-color: #f4ad39;
 $text-footer-color: #6d450c;
 $bg-footer-bottom-color: #6e2c1e;
 $bg-burger-color: #12c37c;
+$bg-btn-color: #0aa566;
