--- a/src/assets/scss/components/_title.scss
+++ b/src/assets/scss/components/_title.scss
@@ -1,5 +1,7 @@
 .title {
-	@include font ($fs: 3.125rem, $lh: 0.8em, $ls: -0.02em, $fw: 600);
+	@include font ($font-size: 50px, $line-height: 40px, $font-weight: 600);
+	letter-spacing: -0.02em;
+
 
 	&--orange {
 		color: #f7ae3b;
@@ -13,7 +15,7 @@
 
 	@media only screen and (max-width: 360px) {
 		& {
-			@include font ($fs: 2.75rem, $lh: 1.25em);
+			@include font ($font-size: 44px, $line-height: 55px);
 		}
 	}
 }
