--- a/src/assets/scss/layout/_about.scss
+++ b/src/assets/scss/layout/_about.scss
@@ -4,7 +4,7 @@
 
 
 	&__inner {
-		@include flex($fw: wrap);
+		@include flex($flex-wrap: wrap);
 		min-height: 800px;
 	// @media only screen and (max-width: 1520px) {
 	// 	height: auto;
@@ -28,9 +28,8 @@
 		&::before {
 			@include pseudo;
 			@include background (url(../images/about/about_line.png));
-			@include pos ($position: absolute, $t: 65px, $l: -10px);
-			width: 450px;
-			height: 13px;
+			@include pos ($position: absolute, $top: 65px, $left: -10px);
+			@include wh (450px, 13px);			
 			// @media screen and (max-width: 768px) {
 			// 	display: none;
 			// 	}
@@ -45,7 +44,7 @@
 	}
 
 	&__wrap {
-		@include flex ($fd: column);
+		@include flex ($flex-direction: column);
 		margin: 85px 0 95px 0;
 		flex-basis: 49%;
 		// padding-left: 18px;
@@ -65,7 +64,7 @@
 	&__title {
 		max-width: 640px;
 		margin-bottom: 55px;
-		@include font ($fs: 3.4375rem, $lh: 1.1em);
+		@include font (55, 60px);
 	}
 
 	&__list {
@@ -75,7 +74,7 @@
 		}
 
 	&__item {
-		@include font ($fs: 1.3125rem, $lh: 1.05em);
+		@include font (21px, 22px);
 		margin-bottom: 22px;
 		
 		&--bold {
@@ -86,13 +85,12 @@
 	&__btn {
 		position: relative;
 		width: 382px;
-		text-indent: -5.25rem;
+		text-indent: -84px;
 				
 		&::before {
 			@include pseudo;
-			@include pos ($position: absolute, $t: 22px, $l: 305px);
-			width: 30px;
-			height: 16px;
+			@include pos-px ($position: absolute, $top: 22, $left: 305);
+			@include wh-px (30, 16);
 			@include background (url("../images/base/arrow.png"));
 		}
 	}
