--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -24,13 +24,14 @@
 	}
 
 	&__title {
-		font-size: 1.625rem;
+		font-size: 26px;
 		margin-bottom: 35px;
 	}
 
 
 	&__info-link {
-		@include font ($fs: 1.125rem, $lh: 1.95em, $ls: -0.02, $fw: 700);
+		@include font (18px, 35px, 700);
+		letter-spacing: -0.02em;
 		color: $text-footer-color;
 	}
 
@@ -44,7 +45,7 @@
 	}
 
 	&__pay-list {
-		@include flex ($jc: flex-start, $ai: center, $fw: wrap);
+		@include flex (flex-start, center, wrap);
 		width: 270px;
 	}
 
@@ -63,17 +64,15 @@
 
 		&::before {
 			@include pseudo;
-			@include pos ($position: absolute, $t: 22px, $l: 22px);
-			width: 24px;
-			height: 19px;
+			@include pos ($position: absolute, $top: 22px, $left: 22px);
+			@include wh-px (24, 19);
 			@include background (url("../images/footer/footer_email.png"));
 		}
 	}
 
 	&__input {
 		max-width: 498px;
-		width: 100%;
-		height: 62px;
+		@include wh (100%, 62px);
 		text-indent: 65px;
 		background-color: $bg-main-color;
 		outline: 0;
@@ -81,29 +80,29 @@
 		border-radius: 30px;
 
 		&::placeholder {
-			@include font ($fs: 1.05rem, $lh: 2.05em, $ls: -0.02em, $fw: 700);
+			@include font (17px, 35px, 700);
+			letter-spacing: -0.02em;
 			color: $text-footer-color;
 		}
 	}
 
 	&__inner {
-		@include flex ($ai: center);
+		@include flex ($align-items: center);
 		margin-left: 37%;
 	}
 
 	&__text {
-		@include font ($fs: 1rem, $lh: 2.5em, $ls: -0.02em, $text-trans: uppercase, $fw: 800);
+		@include font (16px, 40px, 800, $text-transform: uppercase);
 		margin-right: 44px;
 		color: $text-footer-color;
 		position: relative;
 
 		&::before {
 			@include pseudo;
-			@include pos ($position: absolute, $b: 7px, $l: -62px);
+			@include pos (absolute, $bottom: 7px, $left: -62px);
 			@include background (url("../images/footer/footer_arrow.png"));
-			width: 48px;
-			height: 42px;
-		}
+			@include wh (48px, 42px);
+					}
 	}
 
 	&__social {
@@ -113,21 +112,20 @@
 	&__bottom {
 		background-color: $bg-footer-bottom-color;
 		margin: 0 auto;
-		@include flex ($jc: center, $ai: center);
+		@include flex (center, center);
 		height: 60px;
 	}
 
 	&__small {
-		@include font ($fs: 0.8rem, $lh: 2.7em, $ls: 0.02em);
+		@include font (13px, 35px, $text-align: center);
+		letter-spacing: 0.02em;
 		color: #af8a82;
-		text-align: center;
-	}
+			}
 
 	&__link {
 		background-color: #f2662f;
-		width: 53px;
-		height: 55px;
-		@include pos ($position: fixed, $b: 35px, $r: 100px);
+		@include wh-px (53, 55);
+		@include pos (fixed, $bottom: 35px, $right: 100px);
 		z-index: 100;
 		@include background (url(../images/footer/footer_arrow__up.png));
 		background-size: 14px 25px;
@@ -135,10 +133,10 @@
 
 		&::before {
 			@include pseudo ('Go top');
-			@include pos ($position: absolute, $t: 40px, $r: 60px);
-			@include font ($fs: 1rem, $lh: 2.5em, $ls: -0.02em, $fw: 700);
-			width: 55px;
-			height: 14px;
-		}
+			@include pos (absolute, $top: 40px, $right: 60px);
+			@include font (16px, 40px, 700);
+			letter-spacing: -0.02em;
+			@include wh-px (55, 14);
+			}
 	}
 }
