--- a/src/assets/scss/layout/_instagram.scss
+++ b/src/assets/scss/layout/_instagram.scss
@@ -8,7 +8,7 @@
 
 	&__title {
 		margin: 0 0 50px 40px;
-		font-size: 1.5rem;
+		font-size: 24px;
 		text-align: center;
 		position: relative;
 		display: inline-block;
@@ -18,10 +18,9 @@
 
 		&::before {
 			@include pseudo;
-			@include pos ($position: absolute, $t: -5px, $l: -40px);
+			@include pos (absolute, $top: -5px, $left: -40px);
 			@include background (url("../images/instagram/instagramm.png"));
-			width: 26px;
-			height: 26px;
+			
 			}
 	}
 
@@ -38,17 +37,16 @@
 		
 		&::before {
 			@include pseudo;
-			@include pos ($position: absolute, $b: 17px, $r: 23px);
+			@include pos (absolute, $bottom: 17px, $right: 23px);
 			@include background (url("../images/instagram/instagramm_white.png"));
-			width: 26px;
-			height: 26px;
+			@include wh-px (26);
+
 			z-index: 1;
 		}
 	}
 
 	&__img {
-		width: 100%;
-		height: 384px;
+		@include wh (100%, 384px);
 		min-width: 384px;
 	}
 }
