--- a/src/assets/scss/layout/_products.scss
+++ b/src/assets/scss/layout/_products.scss
@@ -3,15 +3,12 @@
 
 	&__wrapper {
 		@include flex (flex-start, center);
-		
-
 	}
 
 	&__item {
 		@include flex (center, center, nowrap, column);
 		min-width: 480px;
-		width: 100%;
-		height: 720px;
+		@include wh (100%, 720px);
 		padding-top: 130px;
 		
 		&--brown {
@@ -29,7 +26,6 @@
 		&--orange {
 			background-color: #c3491f;
 		}
-
 	}
 
 	&__img {
@@ -37,29 +33,26 @@
 		}
 
 	&__title {
-		@include font ($fs: 1.5rem, $lh: 1.1em, $fw: 700);
+		@include font (24px, 26px, $font-weight: 700);
 		margin-bottom: 5px;
 		}
 
 	&__subtitle {
-		@include font ($fs: 1.3rem, $lh: 1.5em);
+		@include font (20px, 30px);
 		margin-bottom: 60px;
 		}
 
 	&__btn {
-		width: 207px;
-		height: 63px;
+		@include wh-px (207, 63);
 		@include border (2px, solid, $bg-main-color);
 		margin-bottom: 80px;
 		position: relative;
 		text-indent: -90px;
-		border-radius: 30px;
-		
+				
 		&::before {
 			@include pseudo;
-			@include pos ($position: absolute, $t: 20px, $l: 140px);
-			width: 30px;
-			height: 16px;
+			@include pos-px (absolute, $top: 20, $left: 140);
+			@include wh-px (30, 16);
 			@include background (url("../images/products/products_arrow_white.png"));
 		}
 	}
