--- a/src/assets/scss/layout/_story.scss
+++ b/src/assets/scss/layout/_story.scss
@@ -2,23 +2,25 @@
 	&__inner {
 		@include flex (center, center, wrap);
 		margin: 120px auto 160px;
-		
+
 		@media only screen and (max-width: 1360px) {
 			@include flex (center, center, wrap, column);
+		}
 	}
-	}
+
 	&__box {
 		@media only screen and (max-width: 1360px) {
 			margin-bottom: 180px;
-			}
+		}
 	}
+
 	&__image {
 		max-width: 584px;
 	}
 
 	&__title {
 		margin-bottom: 43px;
-		}
+	}
 
 	&__text {
 		margin-bottom: 45px;
@@ -26,21 +28,18 @@
 	}
 
 	&__btn {
-		width: 300px;
-		height: 64px;
-		border-radius: 30px;
-		border: none;
+		@include wh-px (300, 64);
 		text-indent: -126px;
 		position: relative;
+
 		@media only screen and (max-width: 1360px) {
 			margin-bottom: 80px;
-			}
+		}
 
 		&::before {
 			@include pseudo;
-			@include pos ($position: absolute, $t: 23px, $r: 40px);
-			width: 30px;
-			height: 16px;
+			@include pos-px (absolute, $top: 23px, $right: 40px);
+			@include wh-px (30, 16);
 			@include background (url("../images/base/arrow.png"))
 		}
 	}
@@ -48,26 +47,27 @@
 	&__content {
 		position: relative;
 		margin-left: 200px;
-		
-		
+
 		@media only screen and (max-width: 1360px) {
 			margin-left: 0;
-			}
-	@media only screen and (max-width: 768px) {
-		margin-left: 125px;
-	}
-	
+		}
+
+		@media only screen and (max-width: 768px) {
+			margin-left: 125px;
+		}
+
 		&::after {
 			@include pseudo;
-			@include pos ($position: absolute, $t: 20px, $l: -170px);
-			width: 290px;
-			height: 216px;
+			@include pos-px ($position: absolute, $top: 20, $left: -170);
+			@include wh-px (290, 216);
 			@include background (url("../images/story/story_stamp.png"));
+
 			@media only screen and (max-width: 360px) {
 				display: none;
 			}
 		}
 	}
+
 	&__img {
 		width: 100%;
 	}
