--- a/src/assets/scss/components/_menu.scss
+++ b/src/assets/scss/components/_menu.scss
@@ -14,11 +14,15 @@
 	&__item+&__item {
 		margin-left: 32px;
 
-
+		
 		@media only screen and (max-width: 1368px) {
 			margin-left: 0;
 			margin-top: 15%;
 		}
+		@media (orientation: landscape) {
+			margin-left: 32px;
+			margin-top: 0;
+			}
 	}
 
 	&__item:hover {
